# rust_realtime_audio_web_portal

./: .aider.chat.history.md  .aider.input.history  Cargo.toml  urls.txt
.aider.tags.cache.v3/: cache.db  cache.db-wal
output/: metadata.json  webrtc-vad.md
src/: index.html  lib.rs  main.rs  vad.js
