[package]
name = "rust_realtime_audio_web_portal"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = { version = "0.21", features = ["std"] }
rand = "0.8"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
http = "0.2"
